# zenith-macros-main

./: .dockerignore  .gitignore  CHANGELOG.md  CLIENT_LAUNCH_RUNBOOK.md  LAUNCH_BLOCKERS.md  LOCAL_DEV.md  README.md  SECURITY.md  STAGING_AND_DEPLOY_GUARD.md  fix_ac.py  fix_final.py  fix_final2.py  fly.toml  fly.web.toml  memory.md  package-lock.json  package.json  start_local.bat  start_zenith_api.bat  start_zenith_dev.bat  start_zenith_website.bat
.github/: CODEOWNERS  pull_request_template.md
API/: .env.example  api.py  requirements.txt
BOT/: bot.py
backend/: .env.example  Dockerfile  FLY_DEPLOY.md  app.py  config.py  database.py  fly.toml  migrate_from_legacy_api.py  migrate_legacy_keys.py  models.py  requirements.txt  seed_test.py  web_oauth.py  wsgi.py
discord-bot/: .env.example  Dockerfile  README.md  fly.toml  package-lock.json  package.json
macros/: anti-detect.js  click-binds.js  engine.js  input.js  triggerbot.js
renderer/: build-metadata.json  index.html  index.html.bak  tauri-bridge.js
scripts/: client_prelaunch.ps1  create_safe_snapshot.ps1  deep_system_smoke.py  fly_preflight.ps1  gen-build-metadata.js  gen-key.js  generate-key.ps1  post-release.js  release.ps1  release_preflight.py  repatch_release.py  sign_and_release.py  sign_zip.py  start.js  zenith-request-signing.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: binds.rs  discord_rpc.rs  focus_lock.rs  input_hook.rs  lib.rs  macro_runtime.rs  main.rs
src-tauri/src/anti_tamper/: mod.rs
src-tauri/src/auth/: challenge.rs  crypto.rs  hwid.rs  mod.rs  session.rs
website/: Dockerfile  dashboard.html  dashboard.js  index.html  package-lock.json  package.json  refund.html  serve.js  site.css  site.js  terms.html
(+110 files in other folders)
