[package]
name = "zenith_macros_tauri"
version = "1.2.8"
description = "Parallel Tauri port for ZenithMacros"
authors = ["ZenithMacros"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zenith_macros_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
free_standalone = []

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
webbrowser = "1.0"
rfd = "0.15"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
discord-rich-presence = "0.2"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Registry",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_Storage_Xps",
] }
